docs(tasks): check off code-quality preview-flag fix (landed in 5c05234)